fix carousel on small phone screens

--- a/src/sections/Sponsor/OurSponsors.scss
+++ b/src/sections/Sponsor/OurSponsors.scss
@@ -214,6 +214,7 @@
 
       @include phone {
         flex-direction: column;
+        gap: 20px;
       }
     }
   }
